Fix label spacing for lines

--- a/app/javascript/styles/lines.scss
+++ b/app/javascript/styles/lines.scss
@@ -11,6 +11,10 @@
     margin: 10px;
   }
 
+  .form-check-label {
+    margin-left: 2em;
+  }
+
   label {
     font-size: $font-size-medium;
   }
